magi/static/less/main.less
/* ... */
.table-padded>tbody>tr>td, .table-padded>tbody>tr>th, .table-padded>tfoot>tr>td, .table-padded>tfoot>tr>th, .table-padded>thead>tr>td, .table-padded>thead>tr>th {
    padding: 20px;
}
.table-rounded>tbody>tr, .table-rounded>tfoot>tr, .table-rounded>tfoot>tr, .table-rounded>thead>tr, .table-rounded>thead>tr {
    &:first-child {
        td {
            border-top: 0;
        }
        td:first-child {
            border-top-left-radius: 10px;
        }
        td:last-child {
            border-top-right-radius: 10px;
        }
    }
    &:last-child {
        td:first-child {
            border-bottom-left-radius: 10px;
        }
        td:last-child {
            border-bottom-right-radius: 10px;
        }
    }
}

.youtube-embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
    iframe, object, embed {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

.about-table, .collection-table {
    td:first-child > [class^="flaticon-"] {
        font-size: 2em;
    }
    img {
        max-height: 200px;
        max-width: 100%;
    }
    td:first-child, &.collection-table td {
        width: 60px;
        img {
            max-width: 100%;
        }
    }
    td:first-child {
        text-align: center;
    }
    td:last-child, &.collection-table td {
        .flaticon-delete {
            color: @brand-danger;
        }
        .flaticon-checked {
            color: @brand-success;
        }
    }
    .color-viewer {
        border-radius: 50%;
        width: 30px;
        height: 30px;
        margin-left: 10px;
        display: inline-block;
        vertical-align: middle;
    }
    .long-text-title {
        display: block;
        padding: 8px 0 16px 0;
        font-weight: bold;
    }
    td:last-child {
        .long-text-title, .long-text-value {
            text-align: left;
            ul {
                list-style-type: disc;
                padding: 8px;
            }
        }
    }
    .text-muted {
        color: #ccc;
        font-size: 0.8em;
    }
    &>tbody>tr>td, &>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
        vertical-align: middle;
    }
    td:last-child {
        text-align: right;
    }
    td:last-child, &.collection-table {
        ul {
            list-style-type: none;
            padding: 0;
            margin: 0;
        }
    }
    .itunes {
        [href="#play"], .itunes-details {
            display: inline-block;
            vertical-align: middle;
        }
        [href="#play"] {
            font-size: 2em;
            padding-left: 20px;
            &:hover, &:focus {
                text-decoration: none;
            }
        }
    }
    .table-headers-sections th {
        text-align: center;
        font-weight: bold;
    }
    th.table-section-header {
        text-align: center;
        font-weight: bold;
    }
    .text_with_link {
        display: inline-block;
        vertical-align: middle;
    }
    .text_with_link_image {
        padding-left: 10px;
        max-height: 80px;
        vertical-align: middle;
    }
    .long_text_field {
        td, th {
            vertical-align: top;
        }
        th {
            padding-top: 17px;
        }
        td:last-child {
            text-align: justify;
        }
        &.spread_across td:last-child {
            text-align: right;
            .images {
                font-size: 0;
            }
            img {
                min-width: 80px;
                max-width: 100%;
                padding: 5px;
                max-height: none;
            }
        }
    }
    &.collection-table [data-field="buttons"] {
        min-width: 80px;
    }
}

.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1,
.col-xs-2, .col-sm-2, .col-md-2, .col-lg-2,
.col-xs-2, .col-sm-2, .col-md-2, .col-lg-3,
.col-xs-special-5, .col-sm-special-5, .col-md-special-5, .col-lg-special-5,
.col-xs-special-7, .col-sm-special-7, .col-md-special-7, .col-lg-special-7,
.col-xs-special-9, .col-sm-special-9, .col-md-special-9, .col-lg-special-9 {
    .about-table {
        &, tbody, tr, td, th {
            width: 100%;
            display: block;
            text-align: center;
        }
        td:first-child {
            font-size: 12px;
            padding-bottom: 0;
        }
        th {
            border-top: 0;
            padding-top: 0;
        }
    }
}

table.text-center th {
    text-align: center;
}

.image-with-links {
    display: inline-block;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    border-radius: 5px;
}
.image-with-links + .popover {
    text-align: center;
    .list-group {
        display: block;
        border: 0px;
        .list-group-item {
            border-right-width: 0;
            border-left-width: 0;
            border-radius: 0;
            &:first-child {
                border-top-width: 0;
            }
        }
        &:last-child {
            .list-group-item:last-child {
                border-bottom-width: 0;
            }
        }
    }
}

.cuteform-elt {
    display: inline-block;
    border-radius: 50%;
    cursor: pointer;
    box-sizing: content-box;
    border: solid 3px;
    [class^="flaticon-"], img&, div& {
        margin: 0 3px;
    }
    div& {
        padding: 4px;
    }
    img&, > img {
        width: 30px;
    }
    > img {
        margin: -4px;
    }
}
/* ... */

